# bastion-falls

./: .cursorrules  .editorconfig  .gitignore  .markdownlint.jsonc  .yarnrc.yml  README.md  bastion-falls.code-workspace  bastion-falls.theia-workspace  commitlint.config.cjs  config.toml  cspell.config.yaml  eslint.config.js  kingraph.cjs  kingraph.sh  lefthook.yml  nodemon-build-lexicon.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs
.cspell/: in-world-place-names.dict  in-world-proper-names.dict  in-world-terms.dict
.devcontainer/: devcontainer.json
.idx/: dev.nix
5etools-homebrew/: package.json
ai-chatlogs/: Adding Lexicon Entry for _al_.md  Choosing AI Models for Fantasy World-Building.md  Clarifying the Agentive Suffix -ok.md  Creating Early Hick Words for Strength.md  Discussion on Hick Language Consonant Clusters.md  Evolution of _toritar rises_ in Hick Language.md  Exploring Missing Linguistic Categories.md  Historical Development of Port Surrey's Walls.md  Lexicon Consistency and Rule Violation Analysis.md  Local Administration and Politics in The Narrows.md  Morphology Section Cross-Check and Verification.md  Negation Development in Early Hick.md  Noble Houses and Political Development in Senera.md  Overview of Senera's History and Geography.md  Proto-Hick Language Development Discussion.md  Reviewing Lexicon for Sound Change Accuracy.md  Reviewing Timeline Inconsistencies and Article Proposals.md  chatgpt-chat-re-religion.md  (+87 more)
visualization/: pyproject.toml  requirements.txt
visualization/visualization/: __init__.py
(+1554 files in other folders)
