[tool.poetry]
name = "visualization"
version = "0.1.0"
description = ""
authors = ["ensu <enrico.suarez@xsplit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
